<resources>
    <string name="app_name">RickAndMorty</string>
    <string name="id_title">ID</string>
    <string name="status_title">STATUS</string>
    <string name="species_title">SPECIES</string>
    <string name="gender_title">GENDER</string>
    <string name="origin_title">ORIGIN</string>
    <string name="last_location_title">LAST LOCATION</string>
    <string name="btn_get_text">GET CHARACTERS</string>
    <string name="name_title">NAME</string>
</resources>
