<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/cv"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="100dp"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="50dp"
    android:backgroundTint="@color/cardBackground">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:paddingHorizontal="20dp"
    android:paddingVertical="10dp">

    <ImageView
        android:id="@+id/character_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/name_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_title"
            android:layout_weight="1"
            android:textColor="@color/titleText"/>

        <TextView
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textColor="@color/text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/id_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_title"
            android:layout_weight="1"
            android:textColor="@color/titleText"/>

        <TextView
            android:id="@+id/id_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textColor="@color/text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/status_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_title"
            android:layout_weight="1"
            android:textColor="@color/titleText"/>

        <TextView
            android:id="@+id/status_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textColor="@color/text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/species_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/species_title"
            android:layout_weight="1"
            android:textColor="@color/titleText"/>

        <TextView
            android:id="@+id/species_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textColor="@color/text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/gender_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_title"
            android:layout_weight="1"
            android:textColor="@color/titleText"/>

        <TextView
            android:id="@+id/gender_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textColor="@color/text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/origin_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/origin_title"
            android:layout_weight="1"
            android:textColor="@color/titleText"/>

        <TextView
            android:id="@+id/origin_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textColor="@color/text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/lastLocation_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_location_title"
            android:layout_weight="1"
            android:textColor="@color/titleText"/>

        <TextView
            android:id="@+id/lastLocation_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textColor="@color/text"/>

    </LinearLayout>


</LinearLayout>

</android.support.v7.widget.CardView>