<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="50dp"
        android:backgroundTint="@color/cardBackground">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp">

            <ImageView
                android:id="@+id/detail_character_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/detail_name_title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_title"
                    android:layout_weight="1"
                    android:textColor="@color/titleText"/>

                <TextView
                    android:id="@+id/detail_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:textColor="@color/text"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/detail_id_title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/id_title"
                    android:layout_weight="1"
                    android:textColor="@color/titleText"/>

                <TextView
                    android:id="@+id/detail_id_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:textColor="@color/text"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/detail_status_title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status_title"
                    android:layout_weight="1"
                    android:textColor="@color/titleText"/>

                <TextView
                    android:id="@+id/detail_status_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:textColor="@color/text"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/detail_species_title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/species_title"
                    android:layout_weight="1"
                    android:textColor="@color/titleText"/>

                <TextView
                    android:id="@+id/detail_species_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:textColor="@color/text"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/detail_gender_title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_title"
                    android:layout_weight="1"
                    android:textColor="@color/titleText"/>

                <TextView
                    android:id="@+id/detail_gender_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:textColor="@color/text"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/detail_origin_title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/origin_title"
                    android:layout_weight="1"
                    android:textColor="@color/titleText"/>

                <TextView
                    android:id="@+id/detail_origin_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:textColor="@color/text"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/detail_lastLocation_title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/last_location_title"
                    android:layout_weight="1"
                    android:textColor="@color/titleText"/>

                <TextView
                    android:id="@+id/detail_lastLocation_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:textColor="@color/text"/>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>

